# skypro_coursework_1

./: .flake8  README.md  pyproject.toml
data/: operations.xlsx
src/: config.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
